versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Weighted.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalWeighted
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function WeightedDefaultConst() &
      bind(C, name='WeightedDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function WeightedDefaultConst

!! Create, default
function WeightedDefault() &
      bind(C, name='WeightedDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function WeightedDefault

!! Create, general, const
function WeightedCreateConst( &
   XYs1d, &
   evaporation &
) &
      bind(C, name='WeightedCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr), value :: evaporation
   type(c_ptr) :: handle
end function WeightedCreateConst

!! Create, general
function WeightedCreate( &
   XYs1d, &
   evaporation &
) &
      bind(C, name='WeightedCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr), value :: evaporation
   type(c_ptr) :: handle
end function WeightedCreate

!! Assign
subroutine WeightedAssign(handleLHS, handleRHS) &
      bind(C, name='WeightedAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine WeightedAssign

!! Delete
subroutine WeightedDelete(handle) &
      bind(C, name='WeightedDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine WeightedDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function WeightedRead(handle, filename, filenameSize) &
      bind(C, name='WeightedRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function WeightedRead

!! Write to file
function WeightedWrite(handle, filename, filenameSize) &
      bind(C, name='WeightedWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function WeightedWrite

!! Print to standard output, in our prettyprinting format
function WeightedPrint(handle) &
      bind(C, name='WeightedPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function WeightedPrint

!! Print to standard output, as XML
function WeightedPrintXML(handle) &
      bind(C, name='WeightedPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function WeightedPrintXML

!! Print to standard output, as JSON
function WeightedPrintJSON(handle) &
      bind(C, name='WeightedPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function WeightedPrintJSON


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function WeightedXYs1dHas(handle) &
      bind(C, name='WeightedXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function WeightedXYs1dHas

!! Get, const
function WeightedXYs1dGetConst(handle) &
      bind(C, name='WeightedXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function WeightedXYs1dGetConst

!! Get
function WeightedXYs1dGet(handle) &
      bind(C, name='WeightedXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function WeightedXYs1dGet

!! Set
subroutine WeightedXYs1dSet(handle, fieldHandle) &
      bind(C, name='WeightedXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine WeightedXYs1dSet


!! -----------------------------------------------------------------------------
!! Child: evaporation
!! -----------------------------------------------------------------------------

!! Has
function WeightedEvaporationHas(handle) &
      bind(C, name='WeightedEvaporationHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function WeightedEvaporationHas

!! Get, const
function WeightedEvaporationGetConst(handle) &
      bind(C, name='WeightedEvaporationGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function WeightedEvaporationGetConst

!! Get
function WeightedEvaporationGet(handle) &
      bind(C, name='WeightedEvaporationGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function WeightedEvaporationGet

!! Set
subroutine WeightedEvaporationSet(handle, fieldHandle) &
      bind(C, name='WeightedEvaporationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine WeightedEvaporationSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalWeighted
